# test_for_memory-system-eval-remake2

./: .gitignore  .gitmodules  README.md  adaptors.py  amem_bench_src.py  bench_amemgym.py  bench_amemgym_amem.py  bench_amemgym_full.py  bench_amemgym_hipporag.py  bench_amemgym_lightrag.py  bench_amemgym_mem0.py  bench_amemgym_memgpt.py  bench_amemgym_onpolicy.py  bench_amemgym_raptor.py  bench_memory_probe.py  bench_memory_probe_amem.py  bench_memory_probe_full.py  bench_memory_probe_hipporag.py  bench_memory_probe_lightrag.py  bench_memory_probe_mem0.py  bench_memory_probe_mem0g.py  bench_memory_probe_memgpt.py  bench_memory_probe_raptor.py  bench_r123.py  bench_structmemeval.py  bench_structmemeval_amem.py  bench_structmemeval_full.py  bench_structmemeval_hipporag.py  bench_structmemeval_lightrag.py  bench_structmemeval_mem0.py  bench_structmemeval_mem0g.py  bench_structmemeval_memgpt.py  bench_structmemeval_raptor.py  benchmark_io_utils.py  benchmark_observability.py  benchmark_status_utils.py  check_hipporag_progress.sh  config.yaml.example  debug_letta_archival_insert.py  fallback_memory_backend.py  (+62 more)
amemgym/: .gitignore  LICENSE  README.md  pyproject.toml
amemgym/configs/agent/: awe-2-4-30.json  awi-hack.json  awi.json  native.json  rag-2-4-30.json
amemgym/configs/agent/awi-evolve/: complete.json  no-evolution.json  question-only.json
amemgym/configs/env/: v1.base.json  v1.extra.json
amemgym/configs/figure/: example.json
amemgym/data/personas/: .placeholder
amemgym/src/amemgym/assistants/: __init__.py  awi.py  base.py  evolvable.py  mem0.py  native.py  (+1 more)
(+231 files in other folders)
